--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.0.2",
-    "@angular/cdk": "^17.2.2",
+    "@angular/cdk": "^17.0.2",
     "@angular/common": "^17.0.2",
     "@angular/compiler": "^17.0.2",
     "@angular/core": "^17.0.2",
     "@angular/forms": "^17.0.2",
-    "@angular/material": "^17.2.2",
+    "@angular/material": "^17.0.2",
     "@angular/platform-browser": "^17.0.2",
     "@angular/platform-browser-dynamic": "^17.0.2",
     "@angular/router": "^17.0.2",
@@ -28,15 +28,15 @@
     "@capacitor/haptics": "5.0.7",
     "@capacitor/keyboard": "5.0.8",
     "@capacitor/status-bar": "5.0.7",
-    "@ionic/angular": "^7.0.0",
+    "@ionic/angular": "^7.8.0",
+    "@ng-select/ng-select": "^12.0.7",
     "cordova-android": "12.0.1",
     "cordova-browser": "7.0.0",
-    "devextreme": "23.2.4",
-    "devextreme-angular": "23.2.4",
+    "devextreme": "23.2.5",
+    "devextreme-angular": "23.2.5",
     "devextreme-schematics": "^1.6.7",
     "ionicons": "^7.0.0",
     "primeng": "^17.10.0",
-    "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
